--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
@@ -143,6 +143,11 @@
                             <label>抽獎機率：</label>
                             <input type="text" class="form-control" id="create_rate" name="LotteryProbability">
                         </div>
+
+                        <button class="mt-3 btn btn-primary btn-block" name="create-submitButton" id="create-submitButton"
+                                style="width: 100%;">
+                            儲存
+                        </button>
                         </div>
                         <div class="tab-pane fade mt-3" id="gproduct-create-nav-pic">
                             <div class="col-md-12">
