--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml
@@ -22,6 +22,12 @@
     <link rel="stylesheet" href="~/css/cdn.datatables.net_1.13.6_css_dataTables.bootstrap5.min.css">
     <link rel="stylesheet" href="~/css/cdn.datatables.net_responsive_2.5.0_css_responsive.bootstrap5.min.css">
 
+    <!--SweetAlert2 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
+
+
+
     @await RenderSectionAsync("Styles", required: false)
 </head>
 
@@ -213,6 +219,9 @@
 
     <!--SWEET ALERT-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <!--SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
 
     <!--登出事件-->
     <!--用src引入會造成中文變成亂碼-->
