--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Bonus/Bonus.cshtml
@@ -95,7 +95,7 @@
                             <input type="text" class="form-control" id="create-quantity" name="TotalQuantity">
                         </div>
 
-                        <div class="col-md-6">
+                    <div class="form-group">
                             <label>是否可使用：</label>
                             <select class="form-select" id="create-usable" name="Usable">
                                 <option value="" selected disabled>請選擇狀態</option>
@@ -138,7 +138,7 @@
                     <thead>
                         <tr>
                             <!-- <th>序號</th> -->
-                            <th>ID</th>
+                            <th>編號</th>
                             <th>名稱</th>
                             <th>內容</th>
                             <th>到期日</th>
@@ -163,7 +163,7 @@
                                         <!--內容表單-->
                                         <div class="row">
                                             <div class="form-group">
-                                                <label>ID</label>
+                                                <label>編號</label>
                                                 <input type="text" class="form-control" readonly disabled id="edit-id" name="CouponId">
                                             </div>
                                             <div class="form-group">
@@ -186,7 +186,6 @@
                                             <div class="form-group">
                                                 <label>是否可使用：</label>
                                                 <select class="form-select" id="edit-usable" name="Usable">
-                                                    <option value="" selected disabled>請選擇狀態</option>
                                                     <option value="true">是</option>
                                                     <option value="false">否</option>
                                                 </select>
@@ -205,47 +204,37 @@
                         <!--編輯彈出視窗-->
 
                         <!--發送至會員-->
-                        <div class="modal fade" id="sendtoMember" aria-hidden="true"
-                             aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+                        <div class="modal fade" id="sendtoMember" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
                             <div class="modal-dialog modal-dialog-centered">
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h5 class="modal-title" id="exampleModalToggleLabel">發送至會員</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                aria-label="Close"></button>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
+                                    <!-- 內容表單 -->
                                     <div class="modal-body">
-                                        <!--內容表單-->
                                         <div class="row">
-                                    <div class="form-group">
-                                        <label>會員編號</label>
-                                        <input type="text" class="form-control" id="sent-memberID" name="MemberID" >
-                                    </div>
-
-                                    <div class="form-group">
-                                        <button type="submit" class="mt-3 btn btn-primary btn-block" name="SendToMember" id=" SendToMember"
-                                                style="width: 50%;">
-                                            發送
-                                        </button>
-
-                                    <div class="form-group">
-                                                <button type="submit" class="mt-3 btn btn-primary btn-block " name="SendCouponToAllMembers" id=" SendCouponToAllMembers"
-                                                        style="width: 100%;">
-                                                    發送優惠券給所有會員
-                                                </button>
+                                            <div class="form-group">
+                                                <label>會員編號</label>
+                                                <input type="text" class="form-control" id="send-memberID" name="MemberID">
                                             </div>
-
+                                        </div>
+                                    </div>
+                                    <!-- 內容表單 -->
+                                    <div class="modal-footer">
                                         <div class="form-group">
-                                            <button type="submit" class="mt-3 btn btn-primary btn-block " name="SendNotify" id=" SendNotify"
-                                                    style="width: 100%;">
+                                            <button type="submit" class="mt-3 btn btn-primary" id="SendToMemberByID">發送</button>
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="submit" class="mt-3 btn btn-primary btn-block" id="SendCouponToAllMembers">
+                                                發送優惠券給所有會員
+                                            </button>
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="submit" class="mt-3 btn btn-primary btn-block SendNotify" id="SendNotify">
                                                 發送到期提醒
                                             </button>
                                         </div>
-
-                                            </div>
-
-                                        </div>
-                                        <!--內容表單-->
                                     </div>
                                 </div>
                             </div>
@@ -264,6 +253,7 @@
     <!--Moment.js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment-with-locales.min.js"></script>
+
     <script>
         //查看Json檔案=========================
         $(document).ready(function () {
@@ -315,8 +305,7 @@
                 {
                     "data": "couponId",
                     "render": function (data, type, row) {
-                        var sendButton = `<button class="btn btn-primary" data-id="${row.couponId}" data-bs-toggle="modal" data-bs-target="#sendtoMember">發送</button>`;
-                        return sendButton;
+                        return `<button class="btn btn-primary send-button" data-bs-toggle="modal" data-bs-target="#sendtoMember" data-id="${row.couponId}">發送</button>`
                     }
                 },
                 {
@@ -324,7 +313,7 @@
                     "render": function (data, type, row) {
                         var deleteUrl = '@Url.Action("Delete", "Bonus", new { area = "AdminCMS", id = "couponId" })';
                         deleteUrl = deleteUrl.replace('couponId', row.couponId);
-                        return `<button class="edit-button" data-id="${row.couponId}" data-bs-toggle="modal" data-bs-target="#EditModalToggle"><i class="fas fa-edit"></i></button> |
+                        return `<button  class="edit-button" data-id="${row.couponId}" data-bs-toggle="modal" data-bs-target="#EditModalToggle"><i class="fas fa-edit"></i></button> |
                                                                                                                                 <button class="btn delete-button" data-id="${row.couponId}" ><i class="fas fa-trash-alt"></i></button>`
                     }
                 }
@@ -359,7 +348,9 @@
 
 
                         $('#edit-quantity').val(response.data.totalQuantity);
-                        $('#edit-usable').val(response.data.usable);
+                        // 將布林值轉換成字串，匹配<select>的選項值
+                        var usableValue = response.data.usable ? "true" : "false";
+                        $('#edit-usable').val(usableValue);
                         console.log(response.data)
 
                     } else {
@@ -534,8 +525,9 @@
 
         //發送至所有會員=======================
         $(document).ready(function () {
-            $(document).on("click", ".SendCouponToAllMembers", function () {
-                var couponId = $(this).data("id");
+        $(document).on('click', '#SendCouponToAllMembers', function () {
+                var couponId = $(this).closest('tr').find('.send-button').data('id');
+                console.log("couponId:", couponId);
 
                 Swal.fire({
                     title: '確定要發送優惠券嗎?',
@@ -566,12 +558,13 @@
                 });
             });
         });
-
         //發送至會員-依MemberID
         $(document).ready(function () {
-            $(document).on("click", ".SendToMember", function () {
-                var couponId = $(this).data("id");
-                var memberId = $("#sent-memberID").val(); // 獲取輸入的 MemberId
+        $(document).on('click', '#SendToMemberByID', function () {
+                var couponId = $(this).closest('tr').find('.send-button').data('id');
+                var memberId = $("#send-memberID").val(); // 獲取輸入的 MemberId
+            console.log("couponId:", couponId);
+            console.log("memberId:", memberId);
 
                 Swal.fire({
                     title: '確定要發送優惠券嗎?',
