--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/ShopDetail.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/ShopDetail.cshtml
@@ -52,18 +52,18 @@
             <div class="col-xl-5 col-lg-5 col-md-6">
                 <div id="carousel-example-1" class="single-product-slider carousel slide" data-ride="carousel">
                     <div class="carousel-inner" role="listbox">
-                    @if (Model.selectedProduct.p圖片路徑.Count() != 0)
-                    {
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="@Model.selectedProduct.p圖片路徑.FirstOrDefault()" />
-                        </div>
-                        @foreach (var img in Model.selectedProduct.p圖片路徑.Where(i => i != Model.selectedProduct.p圖片路徑.FirstOrDefault()))
+                        @if (Model.selectedProduct.p圖片路徑.Count() != 0)
                         {
-                         <div class="carousel-item">
-                            <img class="d-block w-100" src="@img"/>
-                        </div>
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="@Model.selectedProduct.p圖片路徑.FirstOrDefault()" />
+                            </div>
+                            @foreach (var img in Model.selectedProduct.p圖片路徑.Where(i => i != Model.selectedProduct.p圖片路徑.FirstOrDefault()))
+                            {
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="@img" />
+                                </div>
+                            }
                         }
-                    }
                     </div>
                     <a class="carousel-control-prev" href="#carousel-example-1" role="button" data-slide="prev">
                         <i class="fa fa-angle-left" aria-hidden="true"></i>
@@ -74,20 +74,20 @@
                         <span class="sr-only">Next</span>
                     </a>
                     <ol class="carousel-indicators">
-                    @if (Model.selectedProduct.p圖片路徑.Count() != 0)
-                    {
+                        @if (Model.selectedProduct.p圖片路徑.Count() != 0)
+                        {
                             <li data-target="#carousel-example-1" data-slide-to="0" class="active">
                                 <img class="d-block w-100 img-fluid" src="@Model.selectedProduct.p圖片路徑.FirstOrDefault()" />
                             </li>
-                        int i = 0;
-                        @foreach (var img in Model.selectedProduct.p圖片路徑.Where(i => i != Model.selectedProduct.p圖片路徑.FirstOrDefault()))
-                        {
-                            i++;
-                            <li data-target="#carousel-example-1" data-slide-to="@i">
-                                <img class="d-block w-100 img-fluid" src="@img"/>
-                            </li>
+                            int i = 0;
+                            @foreach (var img in Model.selectedProduct.p圖片路徑.Where(i => i != Model.selectedProduct.p圖片路徑.FirstOrDefault()))
+                            {
+                                i++;
+                                <li data-target="#carousel-example-1" data-slide-to="@i">
+                                    <img class="d-block w-100 img-fluid" src="@img" />
+                                </li>
+                            }
                         }
-                    }
                     </ol>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                     {
                         <h5>$ @Model.selectedProduct.pPrice</h5>
                     }
-                    
+
                     <p class="available-stock">
                         @if (Model.selectedProduct.p剩餘庫存 != 0)
                         {
@@ -119,8 +119,9 @@
                         }
                     </p>
                     <p>
-@*                         <i class="fa-solid fa-star fa-xs"></i><i class="fa-solid fa-star fa-xs"></i><i class="fa-solid fa-star fa-xs"></i><i class="fa-solid fa-star fa-xs"></i><i class="fa-solid fa-star fa-xs"></i>(12)
- *@                    </p>
+                        @*                         <i class="fa-solid fa-star fa-xs"></i><i class="fa-solid fa-star fa-xs"></i><i class="fa-solid fa-star fa-xs"></i><i class="fa-solid fa-star fa-xs"></i><i class="fa-solid fa-star fa-xs"></i>(12)
+                        *@
+                    </p>
                     <h4></h4>
                     <p>
                         @Model.selectedProduct?.pItems.Size
@@ -145,7 +146,7 @@
                                             <option value="商品" selected>商品</option>
                                         }
                                     }
-                                    
+
                                 </select>
                             </div>
                         </li>
@@ -165,8 +166,8 @@
                                 <i class="fa-solid fa-cart-plus"></i>
                             </a>
                             <a href="#" id="addToWishListButton" class="btn hvr-hover"
-                                data-product-id="@Model.selectedProduct.pId">
-                                <i class="fas fa-heart"></i> 
+                               data-product-id="@Model.selectedProduct.pId">
+                                <i class="fas fa-heart"></i>
                             </a>
                         </div>
                     </div>
@@ -202,72 +203,38 @@
                         <button class="accordion-button collapsed" type="button" data-toggle="collapse"
                                 data-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                             商品評論
-                            <i class="fa-solid fa-star fa-xs"></i>
-                            <i class="fa-solid fa-star fa-xs"></i>
-                            <i class="fa-solid fa-star fa-xs"></i>
-                            <i class="fa-solid fa-star fa-xs"></i>
-                            <i class="fa-solid fa-star fa-xs"></i>
-                            (12)
+                            <span id="review-avg-rating">
+
+                            </span>
+                            (@Model.reviews.Count())
                         </button>
                     </h2>
                     <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                          data-parent="#accordionFlushExample">
                         <div class="accordion-body">
                             <div class="card-body">
-                                <div class="media mb-3">
-                                    <div class="mr-2">
-                                        <img class="rounded-circle border p-1"
-                                             src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2264%22%20height%3D%2264%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2064%2064%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_160c142c97c%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_160c142c97c%22%3E%3Crect%20width%3D%2264%22%20height%3D%2264%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2213.5546875%22%20y%3D%2236.5%22%3E64x64%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                                             alt="Generic placeholder image" />
+                                @foreach (var r in Model.reviews)
+                                {
+                                    <div class="media mb-3">
+                                        <div class="mr-2">
+                                            <img class="rounded-circle border p-1" width="100" height="100"
+                                                 src="@r.r會員照片"
+                                                 alt="Generic placeholder image" />
+                                        </div>
+                                        <div class="media-body">
+                                            <div class="review-rating">
+                                            </div>
+                                            <span class="rating-each" data-rating-each="@r.r評分"></span>
+                                            <p>
+                                                @r.r內容
+                                            </p>
+                                            <small class="text-muted">by @r.r會員姓名 @r.r評分時間</small>
+                                        </div>
                                     </div>
-                                    <div class="media-body">
-                                        <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            Omnis et enim aperiam inventore, similique necessitatibus
-                                            neque non! Doloribus, modi sapiente laboriosam aperiam
-                                            fugiat laborum. Sequi mollitia, necessitatibus quae sint
-                                            natus.
-                                        </p>
-                                        <small class="text-muted">Posted by Anonymous on 3/1/18</small>
-                                    </div>
-                                </div>
-                                <hr />
-                                <div class="media mb-3">
-                                    <div class="mr-2">
-                                        <img class="rounded-circle border p-1"
-                                             src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2264%22%20height%3D%2264%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2064%2064%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_160c142c97c%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_160c142c97c%22%3E%3Crect%20width%3D%2264%22%20height%3D%2264%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2213.5546875%22%20y%3D%2236.5%22%3E64x64%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                                             alt="Generic placeholder image" />
-                                    </div>
-                                    <div class="media-body">
-                                        <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            Omnis et enim aperiam inventore, similique necessitatibus
-                                            neque non! Doloribus, modi sapiente laboriosam aperiam
-                                            fugiat laborum. Sequi mollitia, necessitatibus quae sint
-                                            natus.
-                                        </p>
-                                        <small class="text-muted">Posted by Anonymous on 3/1/18</small>
-                                    </div>
-                                </div>
-                                <hr />
-                                <div class="media mb-3">
-                                    <div class="mr-2">
-                                        <img class="rounded-circle border p-1"
-                                             src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2264%22%20height%3D%2264%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2064%2064%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_160c142c97c%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_160c142c97c%22%3E%3Crect%20width%3D%2264%22%20height%3D%2264%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2213.5546875%22%20y%3D%2236.5%22%3E64x64%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                                             alt="Generic placeholder image" />
-                                    </div>
-                                    <div class="media-body">
-                                        <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                            Omnis et enim aperiam inventore, similique necessitatibus
-                                            neque non! Doloribus, modi sapiente laboriosam aperiam
-                                            fugiat laborum. Sequi mollitia, necessitatibus quae sint
-                                            natus.
-                                        </p>
-                                        <small class="text-muted">Posted by Anonymous on 3/1/18</small>
-                                    </div>
-                                </div>
-                                <hr />
+                                    <hr/>
+                                }
+
+
                             </div>
                         </div>
                     </div>
@@ -285,7 +252,8 @@
                 <div id="relatable-items" class="featured-products-box owl-carousel owl-theme">
                     <!-- start prod -->
                     @{
-                        foreach(var a in Model.recommands){
+                        foreach (var a in Model.recommands)
+                        {
                             <div class="item">
                                 <div class="products-single-custom fix">
                                     <a href="@Url.Action("ShopDetail", new {pId =  a.pId })" title="@a.pName">
@@ -307,21 +275,17 @@
                                         {
                                             <h5>$ @a.pPrice</h5>
                                         }
-                                        <a href="#" data-product-id=@a.pId type ="button" class="cart-btn add-to-cart-coustom">
+                                        <a href="#" data-product-id=@a.pId type="button" class="cart-btn add-to-cart-coustom">
                                             <i class="fa-solid fa-cart-plus"></i>
                                         </a>
-                                        <a href="#" data-product-id=@a.pId type="button" class="add-to-wishlist-coustom" >
+                                        <a href="#" data-product-id=@a.pId type="button" class="add-to-wishlist-coustom">
                                             <i class="far fa-heart"></i>
                                         </a>
-
                                     </div>
-
-
                                 </div>
                             </div>
                         }
-                        
-                    <!-- end prod  -->
+                        <!-- end prod  -->
                     }
                 </div>
             </div>
@@ -344,9 +308,62 @@
     <script src="~/js/form-validator.min.js"></script>
     <script src="~/js/contact-form-script.js"></script>
     <script src="~/js/custom.js"></script>
-     
+
     <script>
-        var isFavorited = false;
+        var rating = $('#review-avg-rating');
+        var ratingAvg = @Model.reviews.Average(r=>r.r評分);
+        var arrAvg = [];
+        for (var i = 1; i <= 5; i++) {
+            if (ratingAvg >= i) {
+                arrAvg.push(1);
+            } else if (ratingAvg > i - 1 && ratingAvg <= i) {
+                arrAvg.push(2);
+            }
+            else {
+                arrAvg.push(0);
+            }
+        }
+        // console.log(arr);
+        arrAvg.forEach(function (star) {
+            if (star == 1) {
+                rating.append('<i class="fa-solid fa-star fa-sm" style="color:#F4CD1E"></i>');
+            }
+            else if (star == 2) {
+                rating.append('<i class="fa-solid fa-star-half fa-sm" style="color:#F4CD1E"></i>');
+            }
+            else {
+                rating.append('<i class="fa-solid fa-star fa-sm" style="color: #e0e0e0;"></i>');
+            }
+        });
+
+        // var reviewNum = -1;
+        // $('.review-rating').each(function () {
+        //     reviewNum++;
+        //     var ratingEach = $(this).find('.rating-each').data('rating-each');
+        //     var arr = [];
+        //     arr[reviewNum] = []; // 為每個評論創建一個陣列
+        //     for (var i = 1; i <= 5; i++) {
+        //         if (ratingEach >= i) {
+        //             arr[reviewNum].push(1);
+        //         } else if (ratingEach > i - 1 && ratingEach <= i) {
+        //             arr[reviewNum].push(2);
+        //         }
+        //         else {
+        //             arr[reviewNum].push(0);
+        //         }
+        //     }
+        //     var $ratingContainer = $(this); // 存儲當前元素的引用
+        //     $ratingContainer.find('.rating-each').each(function (index) {
+        //         if (arr[reviewNum][index] == 1) {
+        //             $(this).append('<i class="fa-solid fa-star fa-sm" style="color:#F4CD1E"></i>');
+        //         } else if (arr[reviewNum][index] == 2) {
+        //             $(this).append('<i class="fa-solid fa-star-half fa-sm" style="color:#F4CD1E"></i>');
+        //         } else {
+        //             $(this).append('<i class="fa-solid fa-star fa-sm" style="color: #e0e0e0;"></i>');
+        //         }
+        //     });
+        // });
+
         //輸入數量加入購物車
         $("#addToCartButton").on("click", function (event) {
             event.preventDefault();
@@ -354,13 +371,13 @@
             var attr = $("#attr").val();
             var count = $("#count").val();
             var productId = $(this).data("product-id");
-            
-            
+
+
             // 發送 Ajax 請求
             $.ajax({
                 url: '/ProductApi/DetailsAddToCart',
                 type: 'POST',
-            data: { pId: productId, attr: attr, count: count },
+                data: { pId: productId, attr: attr, count: count },
                 dataType: 'json',
                 success: function (response) {
                     if (response.success) {
@@ -388,11 +405,11 @@
             $.ajax({
                 url: '/ProductApi/AddToWishList',
                 type: 'POST',
-                data: { pId: productId},
+                data: { pId: productId },
                 dataType: 'json',
                 success: function (response) {
                     if (response.success) {
-                        
+
                     }
                     else {
                         $('.toast .toast-body').text(response.message);
@@ -404,11 +421,11 @@
             });
         });
 
-        
+
         //相關商品加入購物車
         $("#relatable-items").on('click', '.cart-btn', function (e) {
             e.preventDefault(); // 阻止<a>標籤的點擊預設行為
-            
+
             var productId = $(this).data('product-id');
             console.log('Clicked Add to Cart, Product ID:', productId);
             // 透過 Ajax 將商品 ID 傳送到後端，加入購物車
@@ -447,7 +464,7 @@
                 dataType: 'json',
                 success: function (response) {
                     if (response.success) {
-                       
+
                     }
                     else {
                         $('.toast .toast-body').text(response.message);
@@ -458,6 +475,7 @@
                 }
             });
         });
+
 
     </script>
 }
