註解掉@model IEnumerable<prjCatChaOnlineShop.Models.CModels.CProductItem>

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Shared/CatCha_Layout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Shared/CatCha_Layout.cshtml
@@ -14,7 +14,7 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    @model IEnumerable<prjCatChaOnlineShop.Models.CModels.CProductItem>
+    @* @model IEnumerable<prjCatChaOnlineShop.Models.CModels.CProductItem> *@
 
     <!-- Site Icons -->
     <link rel="shortcut icon" href="~/images/fac.ico" type="image/x-icon" />
